# my_own_document

./: .gitignore  FRONTEND_SETUP_GUIDE.md  README.md
.claude/: settings.local.json
backend/: .env.example  check.py  main.py  pyproject.toml  qdrant_conrol.ipynb
backend/docs/: IMPROVEMENT_SUGGESTIONS.md  README_NEW_STRUCTURE.md  REFACTORING_GUIDE.md
backend/src/: __init__.py
backend/src/api/: main.py
backend/src/core/: __init__.py  chatbot.py  config.py  exceptions.py  user_config.py
backend/src/scripts/: deduplicate_dataset.py  generate_dataset.py
backend/src/services/document/: __init__.py  cache.py  compare_chunk_configs_test.py  loader.py  processor.py  toc_extractor.py
backend/src/services/retrieval/: __init__.py  bm25_retriever.py  embedding_generator.py  reranker.py
backend/src/services/storage/: __init__.py  qdrant_manager.py
backend/src/utils/: __init__.py  tokenizer.py
backend/tests/evaluation/: evaluate_rag.py  test_dataset.json  test_dataset_dedup.json
backend/tests/unit/: check_chunk_metadata.py  check_collection_distribution.py  check_document.py  check_metadata.py  compare_loaders_detailed.py  debug_qdrnat_data.py  debug_toc_ranges.py  loader_test.py  pdf_loader.ipynb  test_chunking_pages.py  test_qdrant_manager.py  test_simplified_processor.py  test_toc_extraction_full.py
config/: qdrant.yaml
electron/: main.js  package-lock.json  package.json  preload.js
frontend/: README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/pages/: ChatPage.js  HomePage.js
(+4 files in other folders)
